--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>OlTriangle</title>
-  <base href="/">
+  <base href="https://tltk90.github.io/ol-triangle/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.85165dae0b311079fca9.css"></head>
+<link rel="stylesheet" href="https://tltk90.github.io/ol-triangle/styles.85165dae0b311079fca9.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.7b63b9fd40098a2e8207.js" defer></script><script src="polyfills.94daefd414b8355106ab.js" defer></script><script src="main.5315a50933755e3d902c.js" defer></script></body>
+<script src="https://tltk90.github.io/ol-triangle/runtime.39f18ada675e0698c449.js" defer></script><script src="https://tltk90.github.io/ol-triangle/polyfills.94daefd414b8355106ab.js" defer></script><script src="https://tltk90.github.io/ol-triangle/main.5315a50933755e3d902c.js" defer></script></body>
 </html>
